<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:backgroundTint="?attr/colorCardBackground"
    app:cardCornerRadius="?attr/colorCardRadius"

    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDayOfWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/day_of_week_label"
            android:textAppearance="@style/CardTextAppearance.Medium"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/tvDate"
            app:layout_constraintStart_toStartOf="@id/tvDate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/date_label"
            android:textAppearance="@style/CardTextAppearance.Small"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDayOfWeek" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="?attr/colorCardIconTint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvDate"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="33dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvDate"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/background_weather_icon"
            android:src="@drawable/ic_baseline_image_search_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvDayTempLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/weather_day_temp_label"
            android:textAppearance="@style/CardTextAppearance.Medium"
            app:layout_constraintStart_toEndOf="@id/ivIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDayTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/weather_temperature_label"
            android:textAppearance="@style/CardTextAppearance.Reading.Medium"
            app:layout_constraintStart_toEndOf="@id/tvDayTempLabel"
            app:layout_constraintTop_toTopOf="@id/tvDayTempLabel" />

        <TextView
            android:id="@+id/tvNightTempLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/weather_night_temp_label"
            android:textAppearance="@style/CardTextAppearance.Small"
            app:layout_constraintStart_toEndOf="@id/ivIcon"
            app:layout_constraintTop_toBottomOf="@id/tvDayTempLabel" />

        <TextView
            android:id="@+id/tvNightTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/weather_temperature_label"
            android:textAppearance="@style/CardTextAppearance.Reading.Small"
            app:layout_constraintStart_toEndOf="@id/tvNightTempLabel"
            app:layout_constraintTop_toTopOf="@id/tvNightTempLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>